--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -19,7 +19,8 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_EDITORS: "False"
           SHOW_LINES_OF_CODE: "True"
-          SHOW_PROFILE_VIEWS: "True"
-          SHOW_COMMIT: "True"
-          SHOW_DAYS_OF_WEEK: "True"
-          SHOW_LANGUAGE: "True"
+          SHOW_TIMEZONE: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
+          
