--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   schedule:
     # Runs every 4 hours
-    - cron: '0 */4 * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -23,4 +23,5 @@ jobs:
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_PROFILE_VIEWS: "False"
           
